# TheRustBandwidthBenchmark

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  bench
.cargo/: config.toml
.github/workflows/: test.yml
src/: main.rs
src/kernels/: check.rs  copy.rs  daxpy.rs  init.rs  mod.rs  sdaxpy.rs  striad.rs  sum.rs  triad.rs  update.rs
src/utils/: arg_parser.rs  benchmark.rs  mod.rs
